<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"

    android:fitsSystemWindows="true"
    android:background="@color/bg"
    tools:context="com.wzlab.smartcity.activity.account.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_login_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/app_name"
                android:textSize="35sp"
                android:textColor="@color/layout_login"/>


            <com.wzlab.smartcity.widget.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="30dp"
                 >

                <com.wzlab.smartcity.widget.ClearableEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_login_phone"
                    android:theme="@style/LoginEditText"
                    android:hint="@string/phone"
                    android:background="#00000000"
                    android:inputType="phone"
                    android:textStyle="bold"
                    android:textColor="@color/layout_login"
                    android:textColorHint="@color/layout_login"
                    android:padding="5dip"
                    android:textSize="@dimen/account_edit_text_size" />
            </com.wzlab.smartcity.widget.FloatLabeledEditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="10dp"
                android:background="@color/layout_login" />

            <com.wzlab.smartcity.widget.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flet_pwd">

                <com.wzlab.smartcity.widget.ClearableEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_login_pwd"
                    android:background="#00000000"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:theme="@style/LoginEditText"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/layout_login"
                    android:textColorHint="@color/layout_login"
                    android:textSize="@dimen/account_edit_text_size" />


            </com.wzlab.smartcity.widget.FloatLabeledEditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rl_code"
                android:visibility="gone">
                <com.wzlab.smartcity.widget.FloatLabeledEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/flet_code"
                    android:layout_weight="5"

                    android:visibility="gone">

                    <com.wzlab.smartcity.widget.ClearableEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_login_code"
                        android:background="#00000000"
                        android:hint="@string/code"
                        android:inputType="textPassword"
                        android:theme="@style/LoginEditText"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/layout_login"
                        android:textColorHint="@color/layout_login"
                        android:visibility="gone"
                        android:textSize="@dimen/account_edit_text_size" />
                </com.wzlab.smartcity.widget.FloatLabeledEditText>
                <com.wzlab.smartcity.widget.CountDownButton
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:id="@+id/btn_send_code"
                    android:layout_weight="1"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="3dp"
                    android:background="@drawable/btn_circle_gray"
                    android:visibility="gone"
                    android:text="@string/send_code"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"

                android:layout_marginTop="3dp"

                android:background="@color/layout_login" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_login_by_code"
                android:text="@string/login_by_code"
                android:gravity="end"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_login"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_by_password"
                android:id="@+id/tv_login_by_pwd"
                android:gravity="end"
                android:visibility="gone"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_login"/>

            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/btn_login"
                android:textSize="18sp"

                android:textColor="@color/bg"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:id="@+id/btn_login"
                android:text="@string/login"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:layout_gravity="start"
                    android:layout_alignParentStart="true"
                    android:textSize="16sp"
                    android:id="@+id/tv_forget_password"
                    android:textColor="@color/text_login"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/sing_in"
                    android:textSize="16sp"
                    android:layout_gravity="end"
                    android:id="@+id/tv_register"
                    android:textColor="@color/text_login"/>
            </RelativeLayout>



        </LinearLayout>



    </ScrollView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="登录即代表阅读并同意服务条款"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:textColor="@color/layout_login"

        android:textSize="14sp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
