<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.wzlab.smartcity.activity.account.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/ll_login_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/new_user_register"
                android:textColor="@color/text_account_layout"
                android:textSize="30sp" />

            <com.wzlab.smartcity.widget.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.wzlab.smartcity.widget.ClearableEditText
                    android:id="@+id/et_register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:padding="5dip"
                    android:textColor="@color/text_account_layout"
                    android:textColorHint="@color/text_account_layout"
                    android:textSize="@dimen/account_edit_text_size"

                    android:theme="@style/LoginEditText" />
            </com.wzlab.smartcity.widget.FloatLabeledEditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:background="@color/text_account_layout" />

            <com.wzlab.smartcity.widget.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <com.wzlab.smartcity.widget.ClearableEditText
                    android:id="@+id/et_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:hint="@string/setting_password"
                    android:inputType="textPassword"
                    android:padding="5dip"
                    android:textColor="@color/text_account_layout"
                    android:textColorHint="@color/text_account_layout"
                    android:textSize="@dimen/account_edit_text_size"

                    android:theme="@style/LoginEditText" />
            </com.wzlab.smartcity.widget.FloatLabeledEditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:background="@color/text_account_layout" />



            <LinearLayout
                android:id="@+id/ll_register_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.wzlab.smartcity.widget.FloatLabeledEditText
                    android:id="@+id/flet_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5">

                    <com.wzlab.smartcity.widget.ClearableEditText
                        android:id="@+id/et_register_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:hint="@string/code"
                        android:inputType="number"
                        android:padding="5dp"
                        android:textColor="@color/text_account_layout"
                        android:textColorHint="@color/text_account_layout"
                        android:textSize="@dimen/account_edit_text_size"


                        android:theme="@style/LoginEditText" />
                </com.wzlab.smartcity.widget.FloatLabeledEditText>

                <com.wzlab.smartcity.widget.CountDownButton
                    android:id="@+id/btn_register_send_code"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_circle_gray"

                    android:text="@string/send_code" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:background="@color/text_account_layout" />

            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/btn_login"
                android:textSize="@dimen/account_edit_text_size"

                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:id="@+id/btn_register"
                android:text="@string/register"/>
        </LinearLayout>
    </ScrollView>

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="35dp"-->
        <!--android:text="登录即代表阅读并同意服务条款"-->

        <!--android:textColor="@color/white"-->
        <!--android:textSize="14sp" />-->

</RelativeLayout>
